src/oqlGrammar.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Query: peg$parseQuery };
  var peg$startRuleFunction = peg$parseQuery;

  var peg$c0 = "where";
  var peg$c1 = "works";
  var peg$c2 = "authors";
  var peg$c3 = "sources";
  var peg$c4 = "institutions";
  var peg$c5 = "funders";
  var peg$c6 = "publishers";
  var peg$c7 = "topics";
  var peg$c8 = "keywords";
  var peg$c9 = "concepts";
  var peg$c10 = "and";
  var peg$c11 = "not";
  var peg$c12 = "it's";
  var peg$c13 = ">=";
  var peg$c14 = "\u2265";
  var peg$c15 = "<=";
  var peg$c16 = "\u2264";
  var peg$c17 = "=";
  var peg$c18 = "is";
  var peg$c19 = "\u2013";
  var peg$c20 = "-";
  var peg$c21 = "includes";
  var peg$c22 = "\"";
  var peg$c23 = "or";
  var peg$c24 = "(";
  var peg$c25 = ")";
  var peg$c26 = "[";
  var peg$c27 = "]";
  var peg$c28 = "unknown";
  var peg$c29 = " is ";
  var peg$c30 = ";";
  var peg$c31 = "sort";
  var peg$c32 = "by";
  var peg$c33 = "sample";
  var peg$c34 = "group";
  var peg$c35 = "include";
  var peg$c36 = "xpac";

  var peg$r0 = /^[a-zA-Z0-9 ]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[^"]/;
  var peg$r3 = /^[a-zA-Z0-9&_\-]/;
  var peg$r4 = /^[\];]/;
  var peg$r5 = /^[a-zA-Z0-9\-]/;
  var peg$r6 = /^[a-zA-Z0-9 &_\-]/;
  var peg$r7 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("where", true);
  var peg$e1 = peg$literalExpectation("Works", true);
  var peg$e2 = peg$literalExpectation("Authors", true);
  var peg$e3 = peg$literalExpectation("Sources", true);
  var peg$e4 = peg$literalExpectation("Institutions", true);
  var peg$e5 = peg$literalExpectation("Funders", true);
  var peg$e6 = peg$literalExpectation("Publishers", true);
  var peg$e7 = peg$literalExpectation("Topics", true);
  var peg$e8 = peg$literalExpectation("Keywords", true);
  var peg$e9 = peg$literalExpectation("Concepts", true);
  var peg$e10 = peg$literalExpectation("and", true);
  var peg$e11 = peg$literalExpectation("not", true);
  var peg$e12 = peg$literalExpectation("it's", true);
  var peg$e13 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], " "], false, false);
  var peg$e14 = peg$literalExpectation(">=", false);
  var peg$e15 = peg$literalExpectation("\u2265", false);
  var peg$e16 = peg$literalExpectation("<=", false);
  var peg$e17 = peg$literalExpectation("\u2264", false);
  var peg$e18 = peg$literalExpectation("=", false);
  var peg$e19 = peg$literalExpectation("is", true);
  var peg$e20 = peg$literalExpectation("\u2013", false);
  var peg$e21 = peg$literalExpectation("-", false);
  var peg$e22 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e23 = peg$literalExpectation("includes", true);
  var peg$e24 = peg$literalExpectation("\"", false);
  var peg$e25 = peg$classExpectation(["\""], true, false);
  var peg$e26 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "&", "_", "-"], false, false);
  var peg$e27 = peg$literalExpectation("or", true);
  var peg$e28 = peg$literalExpectation("(", false);
  var peg$e29 = peg$literalExpectation(")", false);
  var peg$e30 = peg$literalExpectation("[", false);
  var peg$e31 = peg$literalExpectation("]", false);
  var peg$e32 = peg$literalExpectation("unknown", true);
  var peg$e33 = peg$anyExpectation();
  var peg$e34 = peg$literalExpectation(" is ", true);
  var peg$e35 = peg$classExpectation(["]", ";"], false, false);
  var peg$e36 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-"], false, false);
  var peg$e37 = peg$literalExpectation(";", false);
  var peg$e38 = peg$literalExpectation("sort", true);
  var peg$e39 = peg$literalExpectation("by", true);
  var peg$e40 = peg$literalExpectation("sample", true);
  var peg$e41 = peg$literalExpectation("group", true);
  var peg$e42 = peg$literalExpectation("include", true);
  var peg$e43 = peg$literalExpectation("xpac", true);
  var peg$e44 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], " ", "&", "_", "-"], false, false);
  var peg$e45 = peg$otherExpectation("whitespace");
  var peg$e46 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(entityType, clauses, options) {
      return {
        entityType: entityType,
        clauses: clauses,
        options: options || {}
      };
    };
  var peg$f1 = function(entityType) {
      return {
        entityType: entityType,
        clauses: [],
        options: {}
      };
    };
  var peg$f2 = function() { return "works"; };
  var peg$f3 = function() { return "authors"; };
  var peg$f4 = function() { return "sources"; };
  var peg$f5 = function() { return "institutions"; };
  var peg$f6 = function() { return "funders"; };
  var peg$f7 = function() { return "publishers"; };
  var peg$f8 = function() { return "topics"; };
  var peg$f9 = function() { return "keywords"; };
  var peg$f10 = function() { return "concepts"; };
  var peg$f11 = function(first, rest) {
      return [first, ...rest.map(r => r[4])];
    };
  var peg$f12 = function(value) {
      return { type: "boolean", value: value };
    };
  var peg$f13 = function(chars) { return chars.trim(); };
  var peg$f14 = function(field, op, value) {
      return { type: "range", field: field, operator: op, value: value };
    };
  var peg$f15 = function() { return ">="; };
  var peg$f16 = function() { return ">="; };
  var peg$f17 = function() { return "<="; };
  var peg$f18 = function() { return "<="; };
  var peg$f19 = function() { return "="; };
  var peg$f20 = function() { return "is"; };
  var peg$f21 = function(min, max) { return { min: min, max: max }; };
  var peg$f22 = function(min, max) { return { min: min, max: max }; };
  var peg$f23 = function(value) { return { exact: value }; };
  var peg$f24 = function(digits) { return parseInt(digits, 10); };
  var peg$f25 = function(field, searchTerm) {
      return { type: "search", field: field, value: searchTerm };
    };
  var peg$f26 = function(field, values) {
      return { type: "select", field: field, values: values, allNegated: true };
    };
  var peg$f27 = function(field, values) {
      return { type: "select", field: field, values: values, allNegated: false };
    };
  var peg$f28 = function(first, rest) {
      return [first, ...rest.map(r => r[1])].join(' ');
    };
  var peg$f29 = function(chars) {
      return chars;
    };
  var peg$f30 = function(first, rest) {
      return [first, ...rest.map(r => r[4])].flat();
    };
  var peg$f31 = function(first, rest) {
      return [first, ...rest.map(r => r[3])];
    };
  var peg$f32 = function(value) {
      return { ...value, negated: true };
    };
  var peg$f33 = function(value) {
      return { ...value, negated: true };
    };
  var peg$f34 = function(values) {
      return { type: 'group', values: values, grouped: true };
    };
  var peg$f35 = function(value) {
      return { ...value, negated: false };
    };
  var peg$f36 = function(first, rest) {
      const operator = rest.length > 0 ? rest[0][1].toLowerCase() : 'or';
      return { 
        items: [first, ...rest.map(r => r[3])], 
        operator: operator 
      };
    };
  var peg$f37 = function(value) {
      return { ...value, negated: true };
    };
  var peg$f38 = function(value) {
      return { ...value, negated: false };
    };
  var peg$f39 = function(displayName, id) {
      return { displayName: displayName.trim(), id: id };
    };
  var peg$f40 = function(id) {
      return { displayName: null, id: id };
    };
  var peg$f41 = function() {
      return { displayName: "unknown", id: null, isNull: true };
    };
  var peg$f42 = function(displayName) {
      return { displayName: displayName.trim(), id: null };
    };
  var peg$f43 = function(chars) {
      return chars.map(c => c[1]).join('');
    };
  var peg$f44 = function(chars) {
      return chars.trim();
    };
  var peg$f45 = function(chars) {
      return chars.toLowerCase();
    };
  var peg$f46 = function(opts) {
      return opts.reduce((acc, opt) => ({ ...acc, ...opt }), {});
    };
  var peg$f47 = function(field) {
      return { sort: field.trim() };
    };
  var peg$f48 = function(n) {
      return { sample: n };
    };
  var peg$f49 = function(field) {
      return { groupBy: field.trim() };
    };
  var peg$f50 = function() {
      return { includeXpac: true };
    };
  var peg$f51 = function(chars) { return chars.trim(); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseQuery() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseEntityType();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = input.substr(peg$currPos, 5);
      if (s4.toLowerCase() === peg$c0) {
        peg$currPos += 5;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseClauseList();
        if (s6 !== peg$FAILED) {
          s7 = peg$parseOptions();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f0(s2, s6, s7);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$parseEntityType();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f1(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseEntityType() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c1) {
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = input.substr(peg$currPos, 7);
      if (s1.toLowerCase() === peg$c2) {
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f3();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = input.substr(peg$currPos, 7);
        if (s1.toLowerCase() === peg$c3) {
          peg$currPos += 7;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f4();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = input.substr(peg$currPos, 12);
          if (s1.toLowerCase() === peg$c4) {
            peg$currPos += 12;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f5();
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = input.substr(peg$currPos, 7);
            if (s1.toLowerCase() === peg$c5) {
              peg$currPos += 7;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f6();
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = input.substr(peg$currPos, 10);
              if (s1.toLowerCase() === peg$c6) {
                peg$currPos += 10;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e6); }
              }
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$f7();
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = input.substr(peg$currPos, 6);
                if (s1.toLowerCase() === peg$c7) {
                  peg$currPos += 6;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e7); }
                }
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$f8();
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = input.substr(peg$currPos, 8);
                  if (s1.toLowerCase() === peg$c8) {
                    peg$currPos += 8;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e8); }
                  }
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$f9();
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = input.substr(peg$currPos, 8);
                    if (s1.toLowerCase() === peg$c9) {
                      peg$currPos += 8;
                    } else {
                      s1 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e9); }
                    }
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$f10();
                    }
                    s0 = s1;
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseClauseList() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseClause();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = input.substr(peg$currPos, 3);
      if (s5.toLowerCase() === peg$c10) {
        peg$currPos += 3;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e10); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$currPos;
        peg$silentFails++;
        s7 = peg$currPos;
        s8 = peg$parse_();
        s9 = input.substr(peg$currPos, 3);
        if (s9.toLowerCase() === peg$c11) {
          peg$currPos += 3;
        } else {
          s9 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e11); }
        }
        if (s9 !== peg$FAILED) {
          s8 = [s8, s9];
          s7 = s8;
        } else {
          peg$currPos = s7;
          s7 = peg$FAILED;
        }
        peg$silentFails--;
        if (s7 === peg$FAILED) {
          s6 = undefined;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseClause();
          if (s8 !== peg$FAILED) {
            s4 = [s4, s5, s6, s7, s8];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = input.substr(peg$currPos, 3);
        if (s5.toLowerCase() === peg$c10) {
          peg$currPos += 3;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$currPos;
          peg$silentFails++;
          s7 = peg$currPos;
          s8 = peg$parse_();
          s9 = input.substr(peg$currPos, 3);
          if (s9.toLowerCase() === peg$c11) {
            peg$currPos += 3;
          } else {
            s9 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e11); }
          }
          if (s9 !== peg$FAILED) {
            s8 = [s8, s9];
            s7 = s8;
          } else {
            peg$currPos = s7;
            s7 = peg$FAILED;
          }
          peg$silentFails--;
          if (s7 === peg$FAILED) {
            s6 = undefined;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_();
            s8 = peg$parseClause();
            if (s8 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7, s8];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f11(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseClause() {
    var s0;
